package com.ecommerce.beatiful.android.util


val categoryMap = mapOf(
    "360832011" to "Mochilas",
    "15342831" to "Limpeza",
    "16227130011" to "Video Games",
    "172282" to "Eletronicos",
    "3760901" to "Saude / Limpeza",
)

