...

class FakeAmazonProductCategoryResource : AmazonProductByCategoryResource {
    private var haveData = false
    private val currentTime = Clock.System.now().toEpochMilliseconds()
    private var dataDatabase = mutableListOf(
        AmazonProductCategoryModel(
            name = "Mochilas em geral",
            breadcrumbPath = BREADCRUMB_PATH_FROM_DATABASE_BACKPACKS,
            id = IdsProductsCategory.BACKPACK.value,
            createAt = currentTime,
            results = mutableListOf(
                AmazonResultSerialization(
                    asin = "",
...
                    rating = 4.35,
                    seller = AmazonSellerSerialization(
                        logoUrl = "https://github.com/kenjimaead5.png",
                        name = "Lacoste",
                        rating = 4.96
                    ),
                    title = "Mochila linda para estudos",
                    url = "https://github.com/kenjimaead5.png"
                )
            )
        ),
        AmazonProductCategoryModel(
            name = "Limpeza",
...
